# CPP_Qt_BrickGame

./: CMakeLists.txt  Makefile  main.cc  main_console.c
resources/: resources.qrc
src/: main.cc
src/brick_game/: game.hpp  game_info.hpp
src/brick_game/facade/: model_facade.hpp
src/brick_game/snake/: snake.hpp
src/brick_game/tetris/: tetris.hpp
src/controller/: controller.hpp
src/gui/cli/: console_view.c  console_view.h
src/gui/desktop/: graphic_widget.hpp  view.cc  view.hpp  view.ui
src/model/facade/: model_facade.hpp
src/model/games/: game.hpp
src/model/games/snake/: snake.hpp
src/model/games/tetris/: tetris.hpp
src/view/: graphic_widget.hpp  view.cc  view.hpp  view.ui
tests/: unit_tests.c
